styles/Home.module.css
.header {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 175px 0;
}

.main {
  display: flex;
  flex-direction: column;
}

.main > section {
  margin-bottom: 100px;
}

.sub-header {
  font-size: 2.67vw;
  letter-spacing: var(--text-tracking);
  margin-bottom: 0;
  color: white;
  text-shadow: 0px 4px 10px black;
}

.title {
  font-size: 10vw;
  letter-spacing: var(--header-tracking);
  font-weight: bold;
  margin: 0;
  color: white;
  text-shadow: 0px 20px 20px rgba(0, 0, 0, 0.75);
}

.button {
  font-size: 18px;
  letter-spacing: var(--text-tracking);
  width: 285px;
  height: 70px;
  background: rgb(237, 56, 209);
  background: linear-gradient(
    180deg,
    rgba(237, 56, 209, 1) 0%,
    rgba(133, 56, 237, 1) 100%
  );
  color: white;
  border-radius: 43px;
  border: 0px;
}

.grid {
  width: 99vw;
  display: grid;
  grid-template-rows: repeat(2, 350px);
  grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
  justify-items: center;
  align-items: center;
}

